08-AGIC-Override-Frontend-Port/kube-manifests/03-Ingress-override-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-service
  annotations:
    appgw.ingress.kubernetes.io/override-frontend-port: "8080"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-nginx-clusterip-service
                port: 
                  number: 80
